ibuilder/tests/not_compile/invalid_rename.stderr
error: expecting a string
 --> $DIR/invalid_rename.rs:5:25
  |
5 |     #[ibuilder(rename = 42)]
  |                         ^^
