ibuilder/tests/not_compile/invalid_rename.rs
use ibuilder::IBuilder;

#[derive(IBuilder)]
enum Enum {
    #[ibuilder(rename = 42)]
    Var1,
}

fn main() {}
